<resources>
    <string name="app_name">MOPS</string>

    <string name="btnAddSkill">Add Skill</string>
    <string name="btnAddProject">Add Project</string>
    <string name="btnAddTeam">Add Team</string>
    <string name="btnBack">Go Back</string>
    <string name="btnDetails">Details</string>
    <string name="btnFinish">Finish</string>
    <string name="btnJoin">Join</string>
    <string name="btnNext">Next</string>
    <string name="bookID_text">Book ID</string>

    <string name="checkoutDate_text">Checkout Date</string>
    <string name="checkOut_btn">Check Out Book</string>
    <string name="checkOut_title">Checkout &amp; Return</string>

    <string name="goback">Back to Main Page</string>
    <string name="goCheckOut_btn">Check Out</string>
    <string name="newUser">Do Query</string>
    <string name="newUserHeader">New User</string>

    <string name="groupMatches">FIND PROJECT MATCHES</string>
    <string name="groupProfile">PROFILE</string>
    <string name="groupProjects">PROJECTS</string>
    <string name="groupSchoolmates">OTHER STUDENTS</string>
    <string name="groupTeams">TEAMS</string>


    <string name="headerNewProject">New Project</string>
    <string name="headerProfileDate">Your Data</string>
    <string name="hint">Select</string>
    <string name="home_instruction">Log in or sign up below.</string>
    <string name="home_login">Log in</string>
    <string name="home_username">Username:</string>
    <string name="home_newUser">I\'m a new user.</string>
    <string name="home_NewToApp">New User? No Problem.</string>
    <string name="home_welcome">Welcome to the MOPS App!</string>

    <string name="inptFirst">First Name</string>
    <string name="inptLast">Last Name</string>
    <string name="inptPreferred">Preferred Name</string>
    <string name="inptPronouns">Pronouns</string>
    <string name="inptPronounsSelect">Select Pronouns</string>
    <string name="inptAddress1">Address Line 1</string>
    <string name="inptAddress2">Address Line 2</string>
    <string name="inptAddress2Optional">Address Line 2 (optional)</string>
    <string name="inptCity">City</string>
    <string name="inptState">Selected State</string>
    <string name="inptZIP">ZIP</string>
    <string name="inptEmail">Email</string>
    <string name="inptPhone">Phone</string>
    <string name="inptSchool">Select School</string>
    <string name="inptSkill">Select Skill</string>

    <string name="inptPrjTeam">New Team Name</string>
    <string name="inptPrjName">Project Name</string>
    <string name="inptPrjDesc">Description</string>
    <string name="inptPrjAdvisor">Advisor Email</string>
    <string name="inptPrjStart">Start Date</string>
    <string name="inptPrjEnd">End Date</string>


    <string name="labelID">User ID:</string>
    <string name="labelCreate">Account Created:</string>
    <string name="labelFirst">First Name:</string>
    <string name="labelLast">Last Name:</string>
    <string name="labelPreferred">Preferred Name:</string>
    <string name="labelPronouns">Pronouns</string>
    <string name="labelAddress1">Address</string>
    <string name="labelAddress2">""</string>
    <string name="labelCity">City</string>
    <string name="labelState">State</string>
    <string name="labelZIP">ZIP</string>
    <string name="labelPhone">Phone</string>
    <string name="labelEmail">Email</string>
    <string name="labelSchool">School</string>
    <string name="labelSkill1">Skill 1</string>
    <string name="labelSkill2">Skill 2</string>
    <string name="labelSkill3">Skill 3</string>

    <string name="labelProjectID">Project ID:</string>
    <string name="labelProjectDesc">Description:</string>
    <string name="labelProjectCreated">Created:</string>
    <string name="labelProjectStart">Start Date:</string>
    <string name="labelProjectEnd">End Date:</string>
    <string name="labelProjectAdvisor">Advisor Email:</string>
    <string name="labelProjectTeamMember">Current Team Members:</string>
    <string name="labelProjectTeamName">Team:</string>
    <string name="labelProjectSkillsNeeded">Skills Needed:</string>


    <string name="matchesName">Project</string>
    <string name="matchesSkills">Your Skills:</string>
    <string name="matchesTeam">Team</string>
    <string name="matchesContact">Contact</string>
    <string name="menuProfile">Profile</string>
    <string name="menuSettings">Settings</string>
    <string name="menuLogout">Sign Out</string>
    <string name="menuHome">Home</string>

    <string name="prjName">Name</string>
    <string name="prjDesc">Description</string>
    <string name="prjTeam">Team</string>

    <string name="query_prompt">Choose a query</string>

    <string name="registerSchool">School</string>
    <string name="registerSkills">Skills</string>
    <string name="return_btn">Return</string>

    <string name="schoolWPI">WPI - Worcester Polytechnic Institute</string>
    <string name="schoolWSU">WSU - Worcester State University</string>
    <string name="schoolClark">CLR - Clark University</string>

    <string name="showresult">Show Result</string>
    <string name="showresult_btn">Show Result</string>
    <string name="studentID_text">Student ID</string>
    <string name="summary_btn">Summary</string>

    <string name="skill01">Python programming</string>
    <string name="skill02">Data analysis</string>
    <string name="skill03">Leadership</string>
    <string name="skill04">Project management</string>
    <string name="skill05">Communication</string>
    <string name="skill06">Time management</string>
    <string name="skill07">Critical thinking</string>
    <string name="skill08">Collaboration</string>
    <string name="skill09">Creativity</string>
    <string name="skill10">Problem solving</string>


    <string name="teamName">Name</string>
    <string name="teamQtyMembers">QtyMembers</string>

    <string name="title_query">Query</string>
    <string name="strToolbarLogin">Welcome to the MOPS App</string>

    <string name="welcome">Welcome to the MOPS App</string>

</resources>
