<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/checkoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkOut_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/horizontalBar"/>

        <LinearLayout
            android:id="@+id/layout_StudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/studentID"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/studentID_text">
            </TextView>

            <EditText
                android:id="@+id/editStudentID"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:hint="@string/hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bookID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/bookID"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/bookID_text">
            </TextView>

            <EditText
                android:id="@+id/editBookID"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="18sp"
                android:inputType="text"
                android:hint="@string/hint" />

        </LinearLayout>

        <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/horizontalBar"/>

            <TextView
                android:id="@+id/checkoutDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/checkoutDate_text"
                />

            <DatePicker
                android:id="@+id/editDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:paddingHorizontal="20dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/horizontalBar"/>

        <LinearLayout
            android:id="@+id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/btnCheckout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkOut_btn"
                android:layout_marginHorizontal="20dp"
                />

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/return_btn"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/summary_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/summary_btn"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/goback"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>