<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goCheckout_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="false"
    android:layout_gravity="center_horizontal"
    android:layout_margin="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="80dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".MainActivity"
    android:layout_alignParentEnd="false"
    android:layout_alignParentStart="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="Action Buttons" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:gravity="right|center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_instruction"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp"
            android:gravity="left"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/horizontalBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="left|center_vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_username"
                android:gravity="center"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:hint="Enter username"
                android:paddingHorizontal="10dp"
                android:layout_weight="3" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCheckoutPage"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:baselineAligned="false"
            android:text="@string/home_login" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/horizontalBar"/>

        <TextView
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_NewToApp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp"
            android:gravity="left"/>

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/home_newUser" />

        <ImageView
            android:layout_height="200dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/mops_logo" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>