<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="550dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:text="@string/title_query"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerQuery"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:dropDownWidth="270dp"
            android:dropDownSelector="@android:drawable/spinner_background"
            android:entries="@array/query_array"
            android:prompt="@string/query_prompt"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_gravity="right|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="26dp"
            android:layout_weight="0"
            android:text="@string/showresult"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:isScrollContainer="true"
            android:keepScreenOn="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/goback" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>